Create new user allowed for admins only - Restore user details from token and store in ctx - Define rules to allow/disallow resource access (e.g. user) based on user roles and callback function
