# swagger/api.yaml
@@ -66,7 +66,7 @@ paths:
       responses:
         default:
           description: successful operation
-  /user:
+  /users:
     post:
       tags:
         - user
@@ -83,8 +83,17 @@ paths:
           schema:
             $ref: '#/definitions/User'
       responses:
-        default:
-          description: successful operation
+        '201':
+          description: User has been created
+          schema:
+            $ref: '#/definitions/User'
+        '400':
+          description: invalid post request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        '403':
+          schema:
+            $ref: '#/definitions/ApiResponse'
     get:
       tags:
         - user
@@ -100,7 +109,7 @@ paths:
             items:
               $ref: '#/definitions/User'
           description: successful operation
-  '/user/{userID}':
+  '/users/{userID}':
     get:
       tags:
         - user
@@ -149,7 +158,7 @@ paths:
             $ref: '#/definitions/User'
         '400':
           description: Invalid input values
-  /resource:
+  /resources:
     post:
       tags:
         - resource
@@ -172,7 +181,7 @@ paths:
               $ref: '#/definitions/Resource'
         '400':
           description: Invalid input values
-  '/resource/{resourceId}':
+  '/resources/{resourceId}':
     get:
       tags:
         - resource
@@ -242,7 +251,6 @@ definitions:
   User:
     type: object
     required:
-      - id
       - username
       - email
     properties:
